# daindex

./: .poetry-sync-db.json  .pre-commit-config.yaml  DAindex-tutorial.ipynb  LICENSE  README.md  SECURITY.md  mimic-case-studies.ipynb  pyproject.toml  setup.py  tox.ini
.github/: cloc.sh
.github/workflows/: badges.yml  codeql.yml  dynamic_badges.yaml  dynamic_badges.yml  pypi.yml  pypi_publish.yaml  ruff.yaml  ruff.yml  tests.yml  tox_pytest.yaml
DAindex/: core.py  util.py
DAindex_lib/: readme.md
DAindex_lib/DAindex/src/: DAindex.py
daindex/: __init__.py  core.py  main.py  ml.py  util.py
src/da-index/: main.py
src/daindex/: util.py
tests/: test_core.py  test_main.py
tutorials/: adult_tutorial.ipynb  basic_tutorial.ipynb  meps_tutorial.ipynb  meps_tutorial.py
