[tool.poetry]
name = "daindex"
version = "0.2.2"
description = "Deterioration Allocation Index Framework"
authors = ["Honghan <honghan.wu@gmail.com>", "HarrisonWilde <h.wilde@ucl.ac.uk>"]
license = "MIT"
readme = ["README.md"]
repository = "https://github.com/knowlab/daindex"
keywords = ["evaluation", "fairness", "machine learning", "data science", "bias"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.3"
pre-commit = "^3.8.0"
pre-commit-hooks = "^4.6.0"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
tox = "^4.18.0"
pytest-mock = "^3.14.0"

[tool.poetry.group.tutorials]
optional = true

[tool.poetry.group.tutorials.dependencies]
jupyter = "^1.1.1"
notebook = "^7.2.2"

[tool.ruff]
include = ["*.py", "*.pyi", "pyproject.toml", "*.ipynb"]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "C90", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["daindex"]

[tool.pytest.ini_options]
testpaths = "tests"

[tool.coverage.run]
source = ["daindex"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
