[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["daindex"]

[project]
name = "daindex"
authors = [
    { name = "Harrison Wilde", email = "h.wilde@ucl.ac.uk" },
    { name = "Honghan Wu", email = "honghan.wu@gmail.com" },
]
version = "0.9.1"
description = "Deterioration Allocation Index Framework"
license = "MIT"
readme = "README.md"
keywords = [
    "evaluation",
    "fairness",
    "machine learning",
    "data science",
    "bias",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "joblib>=1.5.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.5",
    "tox>=4.28.2",
    "tox-uv>=1.26.2",
]
tutorials = ["aif360>=0.6.1", "jupyter>=1.1.1", "notebook>=7.4.4"]

[tool.uv]
package = true
default-groups = ["dev", "tutorials"]

[project.urls]
repository = "https://github.com/knowlab/daindex"
issues = "https://github.com/knowlab/daindex/issues"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "ANN", # flake8-annotations
    "B",   # flake8-bugbear: Likely bugs
    "C",   # flake8-comprehensions and mccabe complexity
    "E",   # pycodestyle: Errors (default)
    "F",   # pyflakes: Linter
    "I",   # isort
    "N",   # pep8-naming: Naming conventions
    "W",   # pycodestyle: Warnings (default)
]
ignore = [
    "D100", # Warns about missing module-level docstrings
    "S101", # Warns about assert being removed when compiled
    "B006", # Do not use mutable data structures for argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["daindex"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402", "D104"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.tox]
envlist = ["py310", "py311", "py312", "py313"]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
description = "Run test under {base_python}"
commands = [["pytest", "-v"]]

[tool.coverage.run]
branch = true
source = ["."]
omit = ["tests/*", "tutorials/*"]
